# H5_Lobby

./: .env.template  .gitignore  AA3_script.lua  README.md  convert_to_exe.py  main.py  manage.py  pyproject.toml  requirements.txt  settings.toml  settings.toml.template  version.txt  wireguard_handling.py
admin_settings/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
communication/: client.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  App.tsx  main.tsx
h5_backend/: __init__.py  admin.py  apps.py  consumer.py  models.py  notifications.py  routing.py  serializers.py  server.py  settings.toml  settings_handler.py  signals.py  tasks.py  urls.py  views.py
h5_backend/migrations/: 0001_initial.py  0002_alter_player_nickname_alter_player_ranking_position.py  0003_alter_player_ranking_position.py  0004_alter_player_ranking_position.py  (+1 more)
resources/: uwagi.txt  version.txt
src/: background_manager.py  background_processes.py  base_window.py  basic_window.py  client.py  communication_manager.py  custom_thread.py  decorators.py  global_vars.py  helpers.py  lobby.py  lobby_manager.py  login.py  login_manager.py  main.py  run_ashan_arena.py  server.py  settings_reader.py  settings_writer.py  vpn_handling.py  wireguard_handling.py
utils/: decorators.py  logger.py
website/: urls.py  views.py
widgets/: button.py  check_box.py  cursor.py  hover_box.py  option_box.py  player_action_menu.py  player_box.py  progress_bar.py  slider.py  text_input.py  users_list.py
window_elements/: button.py  check_box.py  option_box.py  text_input.py
(+7 files in other folders)
