[tool.poetry]
name = "h5-lobby"
version = "0.1.0"
description = ""
authors = ["Kaczk0vsky <piterspp1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"
toml = "^0.10.2"
django = "^5.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
