[tool.poetry]
name = "h5-lobby"
version = "0.1.0"
description = ""
authors = ["Kaczk0vsky <piterspp1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pygame = "^2.6.1"
toml = "^0.10.2"
django = "^5.1.12"
requests = "^2.32.5"
easygui = "^0.98.3"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
pyinstaller = "^6.12.0"
pyarmor = "^9.1.1"
django-oauth-toolkit = "^3.0.1"
psutil = "^7.0.0"
pygetwindow = "^0.0.9"
keyboard = "^0.13.5"
logging = "^0.4.9.6"
channels = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150